force-app/main/default/objects/Seminar__c/Seminar__c.object-meta.xml
<CustomObject>
    <label>Seminar</label>
    <nameField>
        <label>Seminar Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Seminars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>