force-app/main/default/objects/Seminar__c/listViews/Seminars.listView-meta.xml
<ListView>
    <fullName>Seminars</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Day__c</columns>
    <columns>Time__c</columns>
    <columns>Venue__c</columns>
    <columns>Speaker__c</columns>
    <filterScope>Everything</filterScope>
    <label>Seminars</label>
</ListView>